---------------------------------------------------------------------------------------------------
Version: 0.7.6
Date: 2022-12-24
  Fixes:
    - Prod mod compatibility with K2+GDIW etc
  Localization:
    - de updates thanks to NathanU
    - ja updates thanks to Sakuro
    - zh thanks to sunnytan53
  Changes:
    - SE ingot in delivery cannon
---------------------------------------------------------------------------------------------------
Version: 0.7.5
Date: 2022-11-20
  Fixes:
    - K2: Compatibility fix for 1.3.7+
---------------------------------------------------------------------------------------------------
Version: 0.7.4
Date: 2022-08-17
  Fixes:
    - SE: Disable matter recipes at start
---------------------------------------------------------------------------------------------------
Version: 0.7.3
Date: 2022-08-16
  Features:
    - Support for SE matter fusion and SE+K2 matter liberation
---------------------------------------------------------------------------------------------------
Version: 0.7.2
Date: 2022-08-13
  Changes:
    - AAI: Oil processing now depends on tungsten processing. Added new pumpjack tech to enable
      pumpjacks prior to other oil processing recipes.
    - Some minor modded recipe updates
---------------------------------------------------------------------------------------------------
Version: 0.7.1
Date: 2022-08-10
  Fixes:
    - Compatibility - fix tech deadlock with MoreScience
---------------------------------------------------------------------------------------------------
Version: 0.7.0
Date: 2022-08-09
  Features:
    - New optional intermediate: Copper tungsten, replaces tungsten plate in some recipes.
      If not unlocked on settings change, use "TungstenRecipes" (no slashes) command.
    - Space Exploration: New option to use tungsten powder instead of molten tungsten.
    - A few basic recipe tweaks for 248k
  Changes: